--- a/src/grepl/dino_scratch.ipynb
+++ b/src/grepl/dino_scratch.ipynb
@@ -211,6 +211,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DinoVisionTransformer(\n",
+       "  (patch_embed): PatchEmbed(\n",
+       "    (proj): Conv2d(3, 384, kernel_size=(14, 14), stride=(14, 14))\n",
+       "    (norm): Identity()\n",
+       "  )\n",
+       "  (blocks): ModuleList(\n",
+       "    (0-11): 12 x NestedTensorBlock(\n",
+       "      (norm1): LayerNorm((384,), eps=1e-06, elementwise_affine=True)\n",
+       "      (attn): MemEffAttention(\n",
+       "        (qkv): Linear(in_features=384, out_features=1152, bias=True)\n",
+       "        (attn_drop): Dropout(p=0.0, inplace=False)\n",
+       "        (proj): Linear(in_features=384, out_features=384, bias=True)\n",
+       "        (proj_drop): Dropout(p=0.0, inplace=False)\n",
+       "      )\n",
+       "      (ls1): LayerScale()\n",
+       "      (drop_path1): Identity()\n",
+       "      (norm2): LayerNorm((384,), eps=1e-06, elementwise_affine=True)\n",
+       "      (mlp): Mlp(\n",
+       "        (fc1): Linear(in_features=384, out_features=1536, bias=True)\n",
+       "        (act): GELU(approximate='none')\n",
+       "        (fc2): Linear(in_features=1536, out_features=384, bias=True)\n",
+       "        (drop): Dropout(p=0.0, inplace=False)\n",
+       "      )\n",
+       "      (ls2): LayerScale()\n",
+       "      (drop_path2): Identity()\n",
+       "    )\n",
+       "  )\n",
+       "  (norm): LayerNorm((384,), eps=1e-06, elementwise_affine=True)\n",
+       "  (head): Identity()\n",
+       ")"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dinov2_vits14_reg"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
